--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
 #main_content {
 	font-family: Verdana;
 	max-width: 800px;
-	margin: auto;
+	margin: -1px auto 0;
 	padding: 0 10px 20px;
 	border-top: 1px solid gray;
 	border-left: 1px solid gray;
